new proj/src/objects/GE_HQ_Region__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_Business_Tier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>P&amp;L Tier that this Region belongs to.</description>
        <inlineHelpText>P&amp;L Tier that this Region belongs to.</inlineHelpText>
        <label>Associated P&amp;L Tier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>GE_HQ_P_L__c.GE_HQ_Is_Active__c</field>
                <operation>equals</operation>
                <value>TRUE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GE_HQ_P_L__c</referenceTo>
        <relationshipLabel>Regions</relationshipLabel>
        <relationshipName>Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Derived_Tier_0__c</fullName>
        <description>System derived value for the Tier 0 P&amp;L based on the selected Associate Business Tier.</description>
        <inlineHelpText>System derived value for the Tier 0 P&amp;L based on the selected Associate Business Tier.</inlineHelpText>
        <label>Derived Tier 0</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Derived_Tier_1__c</fullName>
        <description>System derived value for the Tier 1 P&amp;L based on the selected Associate Business Tier.</description>
        <inlineHelpText>System derived value for the Tier 1 P&amp;L based on the selected Associate Business Tier.</inlineHelpText>
        <label>Derived Tier 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Derived_Tier_2__c</fullName>
        <description>System derived value for the Tier 2 P&amp;L based on the selected Associate Business Tier.</description>
        <inlineHelpText>System derived value for the Tier 2 P&amp;L based on the selected Associate Business Tier.</inlineHelpText>
        <label>Derived Tier 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Region_ID__c</fullName>
        <externalId>true</externalId>
        <label>Region ID</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_GS_Hub__c</fullName>
        <label>Hub</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Level__c</fullName>
        <formula>IF( ISBLANK( Parent_Region__c ) , &quot;Top Level Region&quot;, &quot;Sub Region&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to define is this is a Sub Region.</description>
        <inlineHelpText>If this is a Sub Region, define the parent.</inlineHelpText>
        <label>Parent Region</label>
        <referenceTo>GE_HQ_Region__c</referenceTo>
        <relationshipLabel>Regions</relationshipLabel>
        <relationshipName>Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Business_Tier__c</columns>
        <columns>GE_HQ_Region_ID__c</columns>
        <columns>GE_HQ_Function__c</columns>
        <columns>Hierarchy_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Derived_Tier_2__c</columns>
        <columns>GE_HQ_Derived_Tier_3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
            <value>available</value>
        </filters>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_with_Details</fullName>
        <columns>NAME</columns>
        <columns>GE_HQ_Derived_Tier_0__c</columns>
        <columns>GE_HQ_Derived_Tier_1__c</columns>
        <columns>GE_HQ_Derived_Tier_2__c</columns>
        <columns>GE_HQ_Derived_Tier_3__c</columns>
        <columns>GE_HQ_Derived_Tier_4__c</columns>
        <columns>GE_HQ_Derived_Tier_5__c</columns>
        <columns>GE_HQ_Function__c</columns>
        <columns>GE_HQ_Region_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Hierarchy_Limited_to_1_Sub_Region_Level</fullName>
        <active>true</active>
        <description>Checks to see that the Region hierarchy does not exceed one level of Parent/Child relationship.</description>
        <errorConditionFormula>NOT( ISBLANK( Parent_Region__r.Parent_Region__c ) )</errorConditionFormula>
        <errorMessage>Sub-Regions can only be children of a Top Level Region (not other Sub Regions).</errorMessage>
    </validationRules>
</CustomObject>